--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -208,7 +208,7 @@ ServerAdmin admin@djamol.com
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName server2.djamol.coml
+ServerName host.name.com
 
 
 #
