--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -513,3 +513,10 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+#LoadModule php7_module modules/libphp7.so
+<IfModule php7_module>
+    AddType x-httpd-php .php
+    AddType application/x-httpd-php-source .phps
+	SetHandler application/x-httpd-php 
+</IfModule>
+
